--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
         "watch-poll": "npm run watch -- --watch-poll",
         "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
         "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "commit": "./node_modules/cz-customizable/standalone.js"
     },
     "devDependencies": {
         "@commitlint/cli": "^11.0.0",
@@ -21,6 +22,7 @@
         "axios": "^0.19",
         "cross-env": "^7.0",
         "cz-conventional-changelog": "^3.3.0",
+        "cz-customizable": "^6.3.0",
         "husky": "^4.3.0",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.13",
