--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "husky": {
         "hooks": {
             "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-            "prepare-commit-msg": "exec < /dev/tty && npm run commit --hook || true"
+            "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true"
         }
     },
     "scripts": {
