--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "husky": {
         "hooks": {
             "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-            "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true"
+            "prepare-commit-msg": "exec < /dev/tty && ./node_modules/cz-customizable/standalone.js --hook || true"
         }
     },
     "scripts": {
@@ -13,8 +13,8 @@
         "watch-poll": "npm run watch -- --watch-poll",
         "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
         "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "commit": "./node_modules/cz-customizable/standalone.js"
+        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+        
     },
     "devDependencies": {
         "@commitlint/cli": "^11.0.0",
