--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
     "husky": {
         "hooks": {
             "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-            "prepare-commit-msg": "exec < /dev/tty && ./node_modules/cz-customizable/standalone.js --hook || true"
+            "pre-commit": "exec < /dev/tty && ./node_modules/cz-customizable/standalone.js --hook || true"
         }
     },
-    "scripts": {
-        "dev": "npm run development",
+    "dev": "npm run development",
+        "scripts": {
         "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
         "watch": "npm run development -- --watch",
         "watch-poll": "npm run watch -- --watch-poll",
